Fixed whitespace at the bottom of the page bug

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ header {
 
 body {
     margin: auto 0;
-    height: 100%;
     overflow: hidden;
 }
 
@@ -31,45 +30,12 @@ h2 {
     max-width: 100%;
 }
 
-/* If using CSS Grid
-.grid-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(200px,1fr));
-    grid-template-rows: repeat(3, auto);
-    grid-template-areas:
-        ". about ."
-        ". purpose ."
-        ". simulation .";
-    overflow-x: hidden;
-    justify-content:center;
-    align-content: center;
-    max-width: 100%;
-}
-
-.about {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-.purpose {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;  
-}
-
 .simulation {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-} */
+    height: 100vh;
+}
 
 .about, .purpose, .simulation {
     background-color: #CBD2ED;
-    height: 100%;
     padding-left: 20%;
     padding-right: 20%;
 }
@@ -81,8 +47,4 @@ h2 {
     border: 1px solid #304285;
 }
 
-footer {
-    height: 1000px;
-    background-color: #CBD2ED;
-}
 
